--- a/config/session-service-dev.yml
+++ b/config/session-service-dev.yml
@@ -3,3 +3,5 @@ PORT_DB: 9104
 DB_NAME: SESSION_SERVICE_DB
 DB_USER: postgres
 DB_PASSWORD: Welcome
+IP_ZIPKIN: localhost
+IP_SERVICE_REGISTRY: localhost
