--- a/config/session-service-dev.yml
+++ b/config/session-service-dev.yml
@@ -1,5 +1,10 @@
-IP_DB: localhost
-PORT_DB: 9104
+DB_TYPE: POSTGRESQL
+DB_IP: localhost
+DB_PORT: 9104
 DB_NAME: SESSION_SERVICE_DB
 DB_USER: postgres
 DB_PASSWORD: Welcome
+ZIPKIN_IP: localhost
+ZIPKIN_PORT: 9411
+SERVICE_REGISTRY_IP: localhost
+SERVICE_REGISTRY_PORT: 8761
