--- a/config/session-service-dev.yml
+++ b/config/session-service-dev.yml
@@ -1,10 +1,7 @@
-DB_TYPE: POSTGRESQL
-DB_IP: localhost
-DB_PORT: 9104
-DB_NAME: SESSION_SERVICE_DB
-DB_USER: postgres
-DB_PASSWORD: Welcome
-ZIPKIN_IP: localhost
-ZIPKIN_PORT: 9411
-SERVICE_REGISTRY_IP: localhost
-SERVICE_REGISTRY_PORT: 8761
+DB:
+  TYPE: POSTGRESQL
+  CONNECTION_URL: jdbc:postgresql://localhost:9104/SESSION_SERVICE_DB
+  USERNAME: postgres
+  PASSWORD: Welcome
+SERVICE_REGISTRY_URL: http://localhost:8761/eureka
+ZIPKIN_URL: http://localhost:9411/
