--- a/config/speaker-service-dev.yml
+++ b/config/speaker-service-dev.yml
@@ -3,3 +3,12 @@ DB:
   URL: jdbc:postgresql://localhost:9103/SPEAKER_SERVICE_DB
   USERNAME: postgres
   PASSWORD: Welcome
+#CLOUD_CONFIG_SERVER:
+#  HOST: localhost
+#  PORT: 9296
+ZIPKIN:
+  HOST: localhost
+  PORT: 9411
+SERVICE_REGISTRY:
+  HOST: localhost
+  PORT: 8761
