--- a/config/speaker-service-prod.yml
+++ b/config/speaker-service-prod.yml
@@ -1,6 +1,6 @@
 DB:
   TYPE: POSTGRESQL
-  URL: jdbc:postgresql://speaker-service-db:9103/SPEAKER_SERVICE_DB
+  URL: jdbc:postgresql://speaker-service-db/SPEAKER_SERVICE_DB
   USERNAME: postgres
   PASSWORD: Welcome
 #CLOUD_CONFIG_SERVER:
