--- a/config/speaker-service-dev.yml
+++ b/config/speaker-service-dev.yml
@@ -3,7 +3,26 @@ DB:
   URL: jdbc:postgresql://localhost:9103/SPEAKER_SERVICE_DB
   USERNAME: postgres
   PASSWORD: Welcome
-ZIPKIN:
-  URL: localhost:9411
-SERVICE_REGISTRY:
-  URL: localhost:8761/eureka
+ZIPKIN:           # zipkin
+  URL: http://localhost:9411
+SERVICE_REGISTRY: # eureka
+  URL: http://localhost:8761/eureka
+
+#################
+spring:
+  jpa:
+    database: ${DB.TYPE}
+    show-sql: true
+  datasource:
+    url: ${DB.URL}
+    username: ${DB.USERNAME}
+    password: ${DB.PASSWORD}
+  zipkin:
+    base-url: ${ZIPKIN.URL}
+ 
+ eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: ${SERVICE_REGISTRY.URL}
