--- a/config/api-gateway-prod.yml
+++ b/config/api-gateway-prod.yml
@@ -15,30 +15,31 @@ eureka:
     serviceUrl:
       defaultZone: ${SERVICE_REGISTRY.URL}
 
-cloud:
-  gateway:
-    routes:
-      - id: session-service
-        uri: lb://session-service
-        predicates:
-          - Path=/api/*/sessions/**
-      - id: SPEAKER-SERVICE
-        uri: lb://SPEAKER-SERVICE
-        predicates:
-          - Path=/api/*/speakers/**
-      - id: TAG-SERVICE
-        uri: lb://TAG-SERVICE
-        predicates:
-          - Path=/api/*/tags/**
-      - id: TIMESLOT-SERVICE
-        uri: lb://TIMESLOT-SERVICE
-        predicates:
-          - Path=/api/*/timeslots/**
- #    - id: WORKSHOP-SERVICE
- #      uri: lb://WORKSHOP-SERVICE
- #      predicates:
- #        - Path=/workshops/**
- #    - id: ATTENDEE-TICKET-SERVICE
- #      uri: lb://ATTENDEE-TICKET-SERVICE
- #      predicates:
- #        - Path=/attendeeTickets/**
+spring:
+  cloud:
+    gateway:
+      routes:
+        - id: session-service
+          uri: lb://session-service
+          predicates:
+            - Path=/api/*/sessions/**
+        - id: speaker-service
+          uri: lb://speaker-service
+          predicates:
+            - Path=/api/*/speakers/**
+        - id: TAG-SERVICE
+          uri: lb://TAG-SERVICE
+          predicates:
+            - Path=/api/*/tags/**
+        - id: TIMESLOT-SERVICE
+          uri: lb://TIMESLOT-SERVICE
+          predicates:
+            - Path=/api/*/timeslots/**
+   #    - id: WORKSHOP-SERVICE
+   #      uri: lb://WORKSHOP-SERVICE
+   #      predicates:
+   #        - Path=/workshops/**
+   #    - id: ATTENDEE-TICKET-SERVICE
+   #      uri: lb://ATTENDEE-TICKET-SERVICE
+   #      predicates:
+   #        - Path=/attendeeTickets/**
