--- a/config/tag-service-dev.yml
+++ b/config/tag-service-dev.yml
@@ -3,7 +3,25 @@ DB:
   URL: jdbc:postgresql://localhost:9102/TAG_SERVICE_DB
   USERNAME: postgres
   PASSWORD: Welcome
-SERVICE_REGISTRY:
+ZIPKIN:                                   # zipkin
+  URL: http://localhost:9411
+SERVICE_REGISTRY:                         # eureka
   URL: http://localhost:8761/eureka
-ZIPKIN:
-  URL: http://localhost:9411/
+
+spring:
+  jpa:
+    database: ${DB.TYPE}
+    show-sql: true
+  datasource:
+    url: ${DB.URL}
+    username: ${DB.USERNAME}
+    password: ${DB.PASSWORD}
+  zipkin:
+    base-url: ${ZIPKIN.URL}
+ 
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: ${SERVICE_REGISTRY.URL}
