--- a/config/workshop-service-prod.yml
+++ b/config/workshop-service-prod.yml
@@ -12,6 +12,8 @@ spring:
   jpa:
     database: ${DB.TYPE}
     show-sql: true
+    hibernate:
+      ddl-auto: create
   datasource:
     url: ${DB.URL}
     username: ${DB.USERNAME}
